# apmt

./: conftest.py  main.py  pyproject.toml  pytest.ini  requirements.txt
config/: asgi.py  urls.py
config/settings/: base.py  test.py
src/appointment/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
src/appointment/migrations/: 0001_initial.py
src/dashboard/tests/: test_selenium_dashboard.py
templates/: base.html
templates/appointment/: index.html
