[tool.poetry]
name = "django-project"
version = "0.1.0"
description = "New django project started 2024-04-29"
authors = ["Suman Sunuwar <jaycessunuwar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "<4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
